User DB and login works now

--- a/src/NancyBlog.Web/Views/Admin/index.cshtml
+++ b/src/NancyBlog.Web/Views/Admin/index.cshtml
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Admin Page!</title>
+    <title>Simple Blog using Nancy</title>
 </head>
 <body>
-    Welcome to the Admin area @Model.Username !
+    Welcome to the admin area "@Model.Username"!
 
     <br />
     <br />
