--- a/src/NancyBlog.Web/Views/login.cshtml
+++ b/src/NancyBlog.Web/Views/login.cshtml
@@ -5,9 +5,9 @@
 </head>
 <body>
     <form method="POST">
-        Username <input type="text" name="Username" />
+        Username (admin) <input type="text" name="Username" />
         <br />
-        Password <input name="Password" type="password" />
+        Password (qwe) <input name="Password" type="password" />
         <br />
         Remember Me <input name="RememberMe" type="checkbox" value="True" />
         <br />
