--- a/src/NancyBlog.Web/Views/index.cshtml
+++ b/src/NancyBlog.Web/Views/index.cshtml
@@ -1,9 +1,13 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Forms Authentication Demo</title>
+    <title>Simple Blog using Nancy</title>
 </head>
 <body>
-    <a href="admin">Enter the "Admin Zone"!</a>
+    <ul>
+        <li><a href="admin">Enter the "Admin Zone"!</a></li>
+        <li><a href="dbcreate">Create Tables (drop existing)</a></li>
+        <li><a href="dbupgrade">Upgrade Tables (keep existing)</a></li>
+    </ul>
 </body>
 </html>
