Use Twitter Bootstrap

--- a/src/NancyBlog.Web/Views/index.cshtml
+++ b/src/NancyBlog.Web/Views/index.cshtml
@@ -1,11 +1,7 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>Simple Blog using Nancy</title>
-</head>
-<body>
-    <ul>
-        <li><a href="admin">Enter the "Admin Zone"!</a></li>
-    </ul>
-</body>
-</html>
+﻿﻿@{
+    Layout = "_layout.cshtml";
+}
+
+<h1>NancyBlog<small> A simple blog engine using Nancy framework</small></h1>
+<p>
+</p>
