--- a/src/NancyBlog.Web/Views/Admin/index.cshtml
+++ b/src/NancyBlog.Web/Views/Admin/index.cshtml
@@ -1,13 +1,8 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>Simple Blog using Nancy</title>
-</head>
-<body>
-    Welcome to the admin area "@Model.Username"!
+﻿﻿@{
+    Layout = "_layout.cshtml";
+}
 
-    <br />
-    <br />
-    <a href="@Url.Content("~/logout")">Logout</a>
-</body>
-</html>
+
+<div class="well">
+    Welcome to the admin area "@Model.Username"!
+</div>
