--- a/src/NancyBlog.Web/Views/index.cshtml
+++ b/src/NancyBlog.Web/Views/index.cshtml
@@ -5,6 +5,6 @@
 <h1>NancyBlog<small> A simple blog engine using Nancy framework</small></h1>
 <p>
 </p>
-<pre>
+<!--pre>
 @ViewBag.ConnString
-</pre>
+</pre-->
