--- a/src/NancyBlog.Web/Views/_layout.cshtml
+++ b/src/NancyBlog.Web/Views/_layout.cshtml
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a class="brand" href="#">NancyBlog</a>
+                <a class="brand" href="/">NancyBlog</a>
                 <div class="btn-group pull-right">
                     @if (ViewBag.CurrentUserName == null)
                     { 
